* 完成正在下载界面，支持暂停，恢复下载，支持断点重连。